--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".designpattern.mvp.MvpActivity">
+        </activity>
+        <activity android:name=".designpattern.mvp.MvpNavViewActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
