--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.zxg.smarthome">
 
     <application
+        android:name="SmartHomeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,14 +13,15 @@
         <activity android:name=".designpattern.mvc.MvcActivity">
 
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".designpattern.mvp.MvpActivity">
-        </activity>
-        <activity android:name=".designpattern.mvp.MvpNavViewActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".designpattern.mvp.MvpActivity"></activity>
+        <activity android:name=".designpattern.mvp.MvpNavViewActivity">
+
         </activity>
     </application>
 
